# VoiceBoard

./: .gitignore  README.md  pyproject.toml  requirements.txt  task.md  voiceboard.spec
.github/workflows/: build.yml
voiceboard/: __init__.py  __main__.py  app.py  audio.py  autostart.py  config.py  hotkeys.py  resources.py  transcriber.py  typer.py  ui.py
